@@ -173,7 +173,7 @@ import java.util.Arrays;
 
 public final
 class Inet6Address extends InetAddress {
-    final static int INADDRSZ = 16;
+    static final int INADDRSZ = 16;
 
     /*
      * cached scope_id - for link-local address use only.
@@ -576,11 +576,11 @@ class Inet6Address extends InetAddress {
     };
 
     private static final long FIELDS_OFFSET;
-    private static final sun.misc.Unsafe UNSAFE;
+    private static final jdk.internal.misc.Unsafe UNSAFE;
 
     static {
         try {
-            sun.misc.Unsafe unsafe = sun.misc.Unsafe.getUnsafe();
+            jdk.internal.misc.Unsafe unsafe = jdk.internal.misc.Unsafe.getUnsafe();
             FIELDS_OFFSET = unsafe.objectFieldOffset(
                     Inet6Address.class.getDeclaredField("holder6"));
             UNSAFE = unsafe;
@@ -922,7 +922,7 @@ class Inet6Address extends InetAddress {
     }
 
     // Utilities
-    private final static int INT16SZ = 2;
+    private static final int INT16SZ = 2;
 
     /*
      * Convert IPv6 binary address into presentation (printable) format.
