@@ -29,9 +29,10 @@ import java.security.AccessController;
 import java.util.concurrent.atomic.AtomicLong;
 import java.util.concurrent.atomic.LongAdder;
 
-import sun.misc.JavaLangRefAccess;
-import sun.misc.SharedSecrets;
-import sun.misc.Unsafe;
+import jdk.internal.misc.JavaNioAccess;
+import jdk.internal.misc.JavaLangRefAccess;
+import jdk.internal.misc.SharedSecrets;
+import jdk.internal.misc.Unsafe;
 import sun.misc.VM;
 
 /**
@@ -64,7 +65,7 @@ class Bits {                            // package-private
 
     // -- get/put char --
 
-    static private char makeChar(byte b1, byte b0) {
+    private static char makeChar(byte b1, byte b0) {
         return (char)((b1 << 8) | (b0 & 0xff));
     }
 
@@ -136,7 +137,7 @@ class Bits {                            // package-private
 
     // -- get/put short --
 
-    static private short makeShort(byte b1, byte b0) {
+    private static short makeShort(byte b1, byte b0) {
         return (short)((b1 << 8) | (b0 & 0xff));
     }
 
@@ -208,7 +209,7 @@ class Bits {                            // package-private
 
     // -- get/put int --
 
-    static private int makeInt(byte b3, byte b2, byte b1, byte b0) {
+    private static int makeInt(byte b3, byte b2, byte b1, byte b0) {
         return (((b3       ) << 24) |
                 ((b2 & 0xff) << 16) |
                 ((b1 & 0xff) <<  8) |
@@ -301,7 +302,7 @@ class Bits {                            // package-private
 
     // -- get/put long --
 
-    static private long makeLong(byte b7, byte b6, byte b5, byte b4,
+    private static long makeLong(byte b7, byte b6, byte b5, byte b4,
                                  byte b3, byte b2, byte b1, byte b0)
     {
         return ((((long)b7       ) << 56) |
@@ -702,11 +703,11 @@ class Bits {                            // package-private
 
     static {
         // setup access to this package in SharedSecrets
-        sun.misc.SharedSecrets.setJavaNioAccess(
-            new sun.misc.JavaNioAccess() {
+        SharedSecrets.setJavaNioAccess(
+            new JavaNioAccess() {
                 @Override
-                public sun.misc.JavaNioAccess.BufferPool getDirectBufferPool() {
-                    return new sun.misc.JavaNioAccess.BufferPool() {
+                public JavaNioAccess.BufferPool getDirectBufferPool() {
+                    return new JavaNioAccess.BufferPool() {
                         @Override
                         public String getName() {
                             return "direct";
